# D7050E

./: .gitignore  Cargo.toml  build.rs
src/: context.rs  expr.lalrpop  func.rs  func_param.rs  grammar.lalrpop  interpreter.rs  llvm.rs  main.rs  node.rs  parsing.rs  program.rs  scope.rs  type_checker.rs  type_error.rs  types.rs  util.rs  value.rs  variable.rs
src/errors/: mod.rs  parse_error.rs  type_error.rs  type_errors.rs  unknown_func_error.rs  unknown_var_error.rs
src/grammar/: expr.lalrpop  func.lalrpop
src/parsing/: assign_parser.rs  body_parser.rs  bool_expr_parser.rs  expr_parser.rs  file_parser.rs  func_call_parser.rs  func_dec_parser.rs  if_parser.rs  let_parser.rs  mod.rs  return_parser.rs
src/types/: _type.rs  context.rs  func.rs  func_param.rs  mod.rs  node.rs  opcode.rs  program.rs  scope.rs  value.rs  variable.rs
tests/samples/: assign.rs  assign_variable_to_another.rs  empty_main.rs  fibbonaci_recursive.rs  function_argument_scope.rs  function_call_return_arg.rs  function_call_return_int.rs  function_call_return_local_variable.rs  function_call_return_sum_of_args.rs  function_call_return_variable.rs  if_a_eq_2.rs  if_else.rs  if_else_into_else.rs  if_empty_body.rs  if_statement_true.rs  missing_main.rs  nested_function_calls.rs  relop_neq_false.rs  relop_neq_true.rs  return_in_main.rs  shadowing_return_original.rs  shadowing_return_shadowed.rs  type_inference_bool.rs  type_inference_i32.rs  variable_assignment_in_if_block.rs  variable_function_assignment.rs  variable_in_expression_add.rs  variable_in_expression_div.rs  variable_int_assignment.rs  (+9 more)
