[package]
name = "parser"
version = "0.1.0"
authors = ["MTBorg <martinterneborg96@gmail.com>"]
edition = "2018"
build = "build.rs"

[dependencies]
lalrpop-util = "0.17.2"
regex = "*"
inkwell = { git = "https://github.com/TheDan64/inkwell", branch = "llvm8-0" }

[build-dependencies]
lalrpop = "0.17.2"
